# bsdwhois

./: configure.ac
src/: Makefile.am  whois.1  whois.c
